# firefox_antidetect

./: LICENSE  README.md  pyproject.toml
packaging/: antidetect_firefox.spec  firefox_antidetect.spec  invisible_firefox.spec  invisible_manager.spec  run_manager.py
src/antidetect_firefox/manager/: paths.py
src/antidetect_firefox/ui/: app.py  main_window.py
src/firefox_antidetect/manager/: fingerprint.py  launcher.py  paths.py  settings.py  sx.py
src/firefox_antidetect/ui/: app.py  main_window.py  web_app.py
src/firefox_antidetect/ui/web/: index.html
src/invisible_firefox/manager/: fingerprint.py  paths.py  store.py
src/invisible_firefox/ui/: app.py  web_app.py
src/invisible_firefox/ui/web/: index.html
src/invisible_manager/: __main__.py
src/invisible_manager/manager/: fingerprint.py  launcher.py  models.py  paths.py
src/invisible_manager/ui/: app.py  fingerprint_panel.py  main_window.py  profile_editor.py
tests/: test_fingerprint.py  test_launcher.py  test_models.py  test_paths.py  test_status.py  test_store.py  test_sx.py  test_ui_app.py  test_ui_editor.py  test_ui_fingerprint.py  test_ui_main.py  test_web_api.py
