[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invisible-firefox"
version = "0.1.0"
description = "Antidetect browser profile manager for the patched Firefox (manual use)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "feder-cr", email = "85809106+feder-cr@users.noreply.github.com" }]
dependencies = [
    "invisible-core @ git+https://github.com/feder-cr/invisible_core.git",
    "platformdirs>=4",
    # cross-platform process tree: on Windows firefox.exe is a launcher stub
    # that spawns the browser as a child and exits, so we track the real
    # browser process (found by profile dir) via psutil - same code Win/Linux/mac.
    "psutil>=5.9",
    # pywebview backend per OS: Windows -> WebView2, macOS -> WKWebView (native,
    # no extra deps); Linux needs an explicit webview backend, so pull the Qt one
    # (pip-installable, unlike the GTK/WebKit2GTK system packages).
    "pywebview>=4.4; sys_platform != 'linux'",
    "pywebview[qt]>=4.4; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/invisible_firefox"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = ["integration: launches a real firefox-14 binary"]
